--- a/src/core/kext/Info.plist.tmpl
+++ b/src/core/kext/Info.plist.tmpl
@@ -36,6 +36,8 @@
         <string>IOResources</string>
         <key>IOResourceMatch</key>
         <string>IOKit</string>
+        <key>IOUserClientClass</key>
+        <string>org_pqrs_driver_KeyRemap4MacBook_UserClient_kext</string>
       </dict>
     </dict>
     <key>OSBundleLibraries</key>
