--- a/src/core/server/English.lproj/MainMenu.xib
+++ b/src/core/server/English.lproj/MainMenu.xib
@@ -105,9 +105,6 @@
 					</object>
 				</object>
 			</object>
-			<object class="NSCustomObject" id="824001862">
-				<string key="NSClassName">PreferencesManager</string>
-			</object>
 			<object class="NSCustomObject" id="267255544">
 				<string key="NSClassName">StatusWindow</string>
 			</object>
@@ -178,30 +175,6 @@
 						<reference key="destination" ref="976324537"/>
 					</object>
 					<int key="connectionID">565</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">preferencesmanager_</string>
-						<reference key="source" ref="915593295"/>
-						<reference key="destination" ref="824001862"/>
-					</object>
-					<int key="connectionID">576</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">preferencesmanager_</string>
-						<reference key="source" ref="882968974"/>
-						<reference key="destination" ref="824001862"/>
-					</object>
-					<int key="connectionID">577</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">preferencesmanager_</string>
-						<reference key="source" ref="267255544"/>
-						<reference key="destination" ref="824001862"/>
-					</object>
-					<int key="connectionID">582</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -311,11 +284,6 @@
 						<reference key="parent" ref="269225066"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">574</int>
-						<reference key="object" ref="824001862"/>
-						<reference key="parent" ref="0"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">578</int>
 						<reference key="object" ref="267255544"/>
 						<reference key="parent" ref="0"/>
@@ -341,7 +309,6 @@
 					<string>554.IBPluginDependency</string>
 					<string>555.IBPluginDependency</string>
 					<string>558.IBPluginDependency</string>
-					<string>574.IBPluginDependency</string>
 					<string>578.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
@@ -357,7 +324,6 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>{{467, 929}, {329, 53}}</string>
-					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -441,46 +407,17 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">PreferencesManager</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/PreferencesManager.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
 					<string key="className">ServerObjcPart</string>
 					<string key="superclassName">NSObject</string>
 					<object class="NSMutableDictionary" key="outlets">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>preferencesmanager_</string>
-							<string>statuswindow_</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>PreferencesManager</string>
-							<string>StatusWindow</string>
-						</object>
+						<string key="NS.key.0">statuswindow_</string>
+						<string key="NS.object.0">StatusWindow</string>
 					</object>
 					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>preferencesmanager_</string>
-							<string>statuswindow_</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBToOneOutletInfo">
-								<string key="name">preferencesmanager_</string>
-								<string key="candidateClassName">PreferencesManager</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">statuswindow_</string>
-								<string key="candidateClassName">StatusWindow</string>
-							</object>
+						<string key="NS.key.0">statuswindow_</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">statuswindow_</string>
+							<string key="candidateClassName">StatusWindow</string>
 						</object>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -531,35 +468,14 @@
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="outlets">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>menu_</string>
-							<string>preferencesmanager_</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>NSMenu</string>
-							<string>PreferencesManager</string>
-						</object>
+						<string key="NS.key.0">menu_</string>
+						<string key="NS.object.0">NSMenu</string>
 					</object>
 					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>menu_</string>
-							<string>preferencesmanager_</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBToOneOutletInfo">
-								<string key="name">menu_</string>
-								<string key="candidateClassName">NSMenu</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">preferencesmanager_</string>
-								<string key="candidateClassName">PreferencesManager</string>
-							</object>
+						<string key="NS.key.0">menu_</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">menu_</string>
+							<string key="candidateClassName">NSMenu</string>
 						</object>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -570,17 +486,6 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">StatusWindow</string>
 					<string key="superclassName">NSObject</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">preferencesmanager_</string>
-						<string key="NS.object.0">PreferencesManager</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">preferencesmanager_</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">preferencesmanager_</string>
-							<string key="candidateClassName">PreferencesManager</string>
-						</object>
-					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/StatusWindow.h</string>
