turn NSSupportsSuddenTermination on @ server

--- a/src/core/server/Info.plist.tmpl
+++ b/src/core/server/Info.plist.tmpl
@@ -30,8 +30,7 @@
     <string>NSApplication</string>
     <key>LSUIElement</key>
     <string>1</string>
-    <!-- We need to call do_reset at exit, so set NSSupportsSuddenTermination=NO -->
     <key>NSSupportsSuddenTermination</key>
-    <string>NO</string>
+    <string>YES</string>
   </dict>
 </plist>
