--- a/src/util/updater/Info.plist.tmpl
+++ b/src/util/updater/Info.plist.tmpl
@@ -7,7 +7,7 @@
     <key>CFBundleExecutable</key>
     <string>${EXECUTABLE_NAME}</string>
     <key>CFBundleIconFile</key>
-    <string></string>
+    <string>app.icon.tiff</string>
     <key>CFBundleIdentifier</key>
     <string>org.pqrs.${PRODUCT_NAME:rfc1034identifier}.updater</string>
     <key>CFBundleInfoDictionaryVersion</key>
