update app.icns @ prefpane

--- a/src/util/prefpane/Info.plist.tmpl
+++ b/src/util/prefpane/Info.plist.tmpl
@@ -25,7 +25,7 @@
 	<key>NSMainNibFile</key>
 	<string>KeyRemap4MacBookPref</string>
 	<key>NSPrefPaneIconFile</key>
-	<string>KeyRemap4MacBookPref.tiff</string>
+	<string>app.icns</string>
 	<key>NSPrefPaneIconLabel</key>
 	<string>KeyRemap4MacBook</string>
 	<key>NSPrincipalClass</key>
