update app.icns @ uninstaller

--- a/src/util/uninstaller/Info.plist.tmpl
+++ b/src/util/uninstaller/Info.plist.tmpl
@@ -7,7 +7,7 @@
     <key>CFBundleExecutable</key>
     <string>${EXECUTABLE_NAME}</string>
     <key>CFBundleIconFile</key>
-    <string>app.icon.tiff</string>
+    <string>app.icns</string>
     <key>CFBundleIdentifier</key>
     <string>org.pqrs.KeyRemap4MacBook_uninstaller</string>
     <key>CFBundleInfoDictionaryVersion</key>
